src/objects/POS_Xref_Prop_Item_Upc__c.object
<CustomObject>
    <fields>
        <fullName>c_current_item_desc__c</fullName>
        <label>Current item description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_current_upc_code__c</fullName>
        <label>Current UPC code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_file_prop_cd__c</fullName>
        <label>File property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_item_family_group_desc__c</fullName>
        <label>Item family group description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_item_master_group_desc__c</fullName>
        <label>Item master group description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_item_max_effective_end_dt__c</fullName>
        <label>Item max effective end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_item_max_effective_start_dt__c</fullName>
        <label>Item max effective start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_pos_max_trans_dt__c</fullName>
        <label>Pos max trans date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_pos_min_trans_dt__c</fullName>
        <label>Pos min trans date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i_item_id__c</fullName>
        <label>Item Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_pos_item_desc_cnt__c</fullName>
        <label>Pos item description count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pos_upc_code_cnt__c</fullName>
        <label>Pos UPC code count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POS Xref Prop Item Upc</label>
    <nameField>
        <displayFormat>PXPIU-{00000}</displayFormat>
        <label>POS Xref Prop Item Upc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Xref Prop Item Upc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>